4. 비즈니스 논리 서버 구현